tests/snapshots/regression/semantic_types__patterns__option_tuple_patterns.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/patterns/option_tuple_patterns.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • tests/fixtures/semantic_types/patterns/option_tuple_patterns.flx
error[E015]: Non-Exhaustive Match

Match over tuple domains is conservatively non-exhaustive without an unguarded catch-all arm.

  tests/fixtures/semantic_types/patterns/option_tuple_patterns.flx:9:5
   |
 9 |     match pair {
   |     ^^^^^^^^^^^^
10 |         (a, b) -> a + b,
   | ^^^^^^^^^^^^^^^^^^^^^^^^
11 |     }
   | ^^^^^

Hint:
  Add an unguarded `_ -> ...` arm. Tuple exhaustiveness is checked conservatively.
